welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: too many arguments for method getMondeHauteur: ()Int
def memo() : Array[Color] =(getMondeHauteur)  {
                                              ^